# research-paper

./: .gitignore  LICENSE  README.md  benchmark_single_pair.py  colab_setup.ipynb  config.py  notebook.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
conf/: config.yaml
conf/agent/: a2c_baseline.yaml
data/: asset_list.xlsm
data_loaders/: data_fetching.py
helpers/: data_fetching.py
modules/: benchmark.py  data_loader.py
modules/core/: execution.py  indicators.py  models.py
modules/data_services/: data_loaders.py  data_models.py  data_pipeline.py  data_preparation.py  data_utils.py  normalization.py  param_optimization.py  statistical_tests.py  z_score_calculation.py
modules/pair_selection/: statistical_tests.py
modules/performance/: a2c_agent.py  data_models.py  debug.py  optimization.py  param_optimization.py  statistical_tests.py  stats.py  strategy.py  strategy_1.py  strategy_2.py  strategy_3.py
modules/visualization/: plots.py
notebooks/: basic_analysis.ipynb  corr_coint_tests.ipynb  data_pipeline.ipynb  how_to_load_data.ipynb  main.ipynb  pair_selection_tests.ipynb  perform_ggr_strategy.ipynb  perform_ym_static_strategy.ipynb  run.ipynb  run_simple_pair_trading.ipynb  simple_run.ipynb  strategy.ipynb  strategy_1.ipynb  strategy_2.ipynb  test.ipynb  theory.ipynb  top1_test.ipynb  top5_test.ipynb
notebooks/others/: basic_analysis.ipynb  corr_coint_tests.ipynb  data_pipeline.ipynb  debug.ipynb  perform_ggr_strategy.ipynb  (+3 more)
scripts/: top1_test.py  top5_test.py
src/: run.py
strategies/: base_strategy.py  pairs_trading.py
(+19 files in other folders)
